--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             function getText(){
                 var result = null;
-                $.ajax( { url: "https://raw.githubusercontent.com/clemens9103/wedding-card/master/README.md",
+                $.ajax( { url: "https://raw.githubusercontent.com/clemens9103/wedding_card/blob/main/README.md",
                         type: 'get',
                         dataType: 'html',
                         async: false,
@@ -101,7 +101,7 @@
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2024. 09. 01. SUM PM 01:00</b>
+                        <b style="font-size:1.4em;">2024. 09. 01. SUN PM 01:00</b>
                         <br>경기 성남시 수정구 위례대로 83 밀리토피아 호텔
                         <br>Millitopia Hotel, 83 Wiryedaero, Seongnam-si, Sujeong-gu, Gyeonggi-do
                     </p>
