--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                 </div>
             </div>
         </div>
+    <!--
        <div class="ww-section parallax-window  text-white" data-parallax="scroll" data-image-src="images/gift/gift-background.jpg" id="gifts">
             <div class="ww-gift-section">
                 <div class="container">
@@ -336,13 +337,14 @@
                 </div>
             </div>
         </div>
+    -->
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">센텀사이언스파크웨딩홀 23층 스카이홀</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">(부산 해운대구 센텀중앙로 79)</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;">밀리토피아 호텔 아이리스 홀</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">경기 성남시 수정구 위례대로 83</h6>
                     </div>
                 </div>
 
@@ -385,8 +387,8 @@
                         <div id="comments"></div>
                         <br>
                         <div class="row">
-                            <div class="col text-center"><form action="https://github.com/AndersonChoi/wedding-card/blob/master/README.md">
-                                <button class="btn btn-primary btn-submit" type="submit">메시지 남기러 가기</button></form>
+                            <div class="col text-center"><form action="https://github.com/clemens9103/wedding-card/blob/master/README.md">
+                                <!--<button class="btn btn-primary btn-submit" type="submit">메시지 남기러 가기</button></form>-->
                             </div>
                         </div>
                     </div>
