--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>태진이와 수정이의 결혼식</title>
+    <title>태진이와 수정이의 결혼식에 여러분을 초대합니다</title>
     <meta content="태진이와 수정이의 결혼식을 축하해주세요!" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
@@ -58,7 +58,7 @@
 
             function getText(){
                 var result = null;
-                $.ajax( { url: "https://raw.githubusercontent.com/clemens9103/wedding_card/blob/main/README.md",
+                $.ajax( { url: "https://github.com/clemens9103/wedding_card/blob/main/README.md",
                         type: 'get',
                         dataType: 'html',
                         async: false,
@@ -120,7 +120,7 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
+                            <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
                         </ul>
                     </div>
@@ -291,7 +291,7 @@
                         <div id="comments"></div>
                         <br>
                         <div class="row">
-                            <div class="col text-center"><form action="https://github.com/clemens9103/wedding-card/blob/master/README.md">
+                            <div class="col text-center"><form action="https://github.com/clemens9103/wedding_card/blob/main/README.md">
                                 <!--<button class="btn btn-primary btn-submit" type="submit">메시지 보내기</button></form>-->
                             </div>
                         </div>
