--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <link href="https://fonts.googleapis.com/css?family=Gamja+Flower|Gugi|Noto+Serif+KR|Stylish|Sunflower:300"
           rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.2.1.js"></script>
-
+    
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.js" type="text/javascript"></script>
     <script type="text/javascript">
+        
         function sendMail() {
 
             (function () {
@@ -80,9 +81,6 @@
             }
         });
 
-
-
-
     </script>
 </head>
 
@@ -120,7 +118,6 @@
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
-                            <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>-->
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
                         </ul>
                     </div>
@@ -292,7 +289,7 @@
                         <br>
                         <div class="row">
                             <div class="col text-center"><form action="https://github.com/clemens9103/wedding_card/blob/main/README.md">
-                                <!--<button class="btn btn-primary btn-submit" type="submit">메시지 보내기</button></form>-->
+                                <button class="btn btn-primary btn-submit" type="submit">메시지 보내기</button></form>
                             </div>
                         </div>
                     </div>
