--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>태진이와 수정이의 결혼식에 여러분을 초대합니다</title>
+    <title>Einladung zur Hochzeit</title>
     <meta content="태진이와 수정이의 결혼식을 축하해주세요!" name="description"/>
     <meta property="og:image" content="images/pic2.jpeg">
     <meta property="fb:app_id" content="781066922265598" />
@@ -25,69 +25,13 @@
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.js" type="text/javascript"></script>
     <script type="text/javascript">
-        
-        function sendMail() {
-
-            (function () {
-                emailjs.init("user_yjLL5xG0A3kkOCH5BGIDh");
-                emailjs.send("wedding-mail", "gift_send", {
-                    name: $("#sender-name").value,
-                    gift: $("#gift-name").text(),
-                    message: $("#sender-message").value
-                }).then(function (response) {
-                    console.log("SUCCESS. status=%d, text=%s", response.status, response.text);
-                }, function (err) {
-                    console.log("FAILED. error=", err);
-                });
-            })();
-        }
-
-        function findGetParameter(parameterName) {
-            var result = null,
-                tmp = [];
-            location.search
-                .substr(1)
-                .split("&")
-                .forEach(function (item) {
-                  tmp = item.split("=");
-                  if (tmp[0] === parameterName) result = decodeURIComponent(tmp[1]);
-                });
-            return result;
-        }
-
-        $(document).ready(function () {
-
-            function getText(){
-                var result = null;
-                $.ajax( { url: "https://github.com/clemens9103/wedding_card/blob/main/README.md",
-                        type: 'get',
-                        dataType: 'html',
-                        async: false,
-                        success: function(data) { result = data; }
-                    }
-                );
-                FileReady = true;
-                return result;
-            }
-            var markdown_source = getText();
-            var comment_contents = markdown_source.split("축하의 말")[1];
-
-            var md = new Remarkable();
-            $("#comments").append(md.render(comment_contents));
-
-            
-            if(findGetParameter('gift')=='false'){
-                $('#gifts').hide();
-            }
-        });
-
+        // 자바 스크립트는 이쪽에
     </script>
 </head>
 
 <body id="top">
 <header></header>
 <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v3.2"></script>
 <div class="page-content">
     <div class="div">
         <div class="ww-home-page" id="home">
@@ -99,9 +43,9 @@
                     </p>
                     <p class="h2 mt-5 ww-title"
                        style="font-family: 'Noto Serif KR', serif; font-size:1.0em; letter-spacing:-1px">
-                        <b style="font-size:1.4em;">2024. 09. 01. SUN PM 01:00</b>
-                        <br>경기 성남시 수정구 위례대로 83 밀리토피아 호텔
+                        <b style="font-size:1.4em;">Sonntag 01.09.2024 13:00 Uhr</b>
                         <br>Millitopia Hotel, 83 Wiryedaero, Seongnam-si, Sujeong-gu, Gyeonggi-do
+                        <br>경기 성남시 수정구 위례대로 83 밀리토피아 호텔
                     </p>
                 </div>
             </div>
@@ -126,19 +70,19 @@
         </div>
         <div class="ww-section" id="couple">
             <div class="container">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2>
+                <!-- <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2> -->
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                한수정</h3>
+                                Sujeong Han</h3>
                             <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
-                                김태진</h3>
+                                Taejin Kim</h3>
                             <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
                         </div>
                     </div>
@@ -147,7 +91,7 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">초대합니다</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Einladen</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             <br>
@@ -156,15 +100,15 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">웨딩 본식</div>
+                            <div class="h4">Hochzeitszeremonie</div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt"></i>
-                                    <span class="pl-2 text-muted">경기 성남시 수정구 위례대로 83 밀리토피아 호텔 아이리스 홀</span>
+                                    <span class="pl-2 text-muted">83 Wiryedaero, Millitopia Hotel, Iris-Saal, Seongnam-si, Sujeong-gu, Gyeonggi-do</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt"></i>
-                                    <span class="pl-2 text-muted">2024년 9월 1일, 1:00PM</span>
+                                    <span class="pl-2 text-muted">01.09.2024 13:00 Uhr</span>
                                 </li>
                             </ul>
                         </div>
@@ -178,15 +122,15 @@
                 <div class="row">
                     <div class="col-md-7 col-sm-12">
                         <div class="my-3">
-                            <div class="h4">식사</div>
+                            <div class="h4">Mahlzeit</div>
                             <ul>
                                 <li>
                                     <i class="text-muted fas fa-map-marker-alt "></i>
-                                    <span class="pl-2 text-muted">경기 성남시 수정구 위례대로 83 밀리토피아 호텔 아이리스 홀 식당</span>
+                                    <span class="pl-2 text-muted">83 Wiryedaero, Millitopia Hotel, Iris-Saal Restaurant, Seongnam-si, Sujeong-gu, Gyeonggi-do</span>
                                 </li>
                                 <li class="pt-2">
                                     <i class="text-muted far fa-calendar-alt "></i>
-                                    <span class="pl-2 text-muted">2024년 9월 1일, 12:00PM - 2:00PM</span>
+                                    <span class="pl-2 text-muted">01.09.2024 12:30 Uhr - 14:30 Uhr</span>
                                 </li>
                             </ul>
                         </div>
@@ -200,7 +144,7 @@
         <div class="ww-section" id="gallery">
             <div class="ww-photo-gallery">
                 <div class="container">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">포토 갤러리</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Fotogalerie </h2>
                     <div class="ww-gallery">
                         <div class="card-columns">
                             <div class="card" data-groups="[&quot;party&quot;,&quot;wedding&quot;]">
@@ -242,10 +186,10 @@
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
-                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">오시는 길</h2>
+                    <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Anfahrt</h2>
                     <div>
-                        <h5 style="font-family: 'Noto Serif KR', serif;">밀리토피아 호텔 아이리스 홀</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">경기 성남시 수정구 위례대로 83</h6>
+                        <h5 style="font-family: 'Noto Serif KR', serif;">Millitopia Hotel, Iris-Saal</h5>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">83 Wiryedaero, Seongnam-si, Sujeong-gu, Gyeonggi-do</h6>
                     </div>
                 </div>
 
@@ -267,11 +211,11 @@
                         </div>
                         <div class="col text-center">
                             <label style="font-family: 'Noto Serif KR', serif; font-size: 15px;">
-                                셔틀버스 - 남위례역에서 10분마다 운행
+                                Shuttlebus - Vom Bahnhof Namwirye alle 10 Minuten.
                             </label>
                         </div>
                         <div class="my-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.682401601013!2d127.14154907775534!3d37.468220029756615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357caf489259336b%3A0x5054599712367595!2z67CA66as7Yag7ZS87JWE7Zi47YWU!5e0!3m2!1sko!2skr!4v1710683809661!5m2!1sko!2skr" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166.682401601013!2d127.14154907775534!3d37.468220029756615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357caf489259336b%3A0x5054599712367595!2z67CA66as7Yag7ZS87JWE7Zi47YWU!5e0!3m2!1sko!2skr!4v1710683809661!5m2!1sde!2sde" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -284,12 +228,12 @@
             <div class="ww-photo-gallery">
                 <div class="container">
                     <div class="col text-center">
-                        <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">축하메시지</h2><br>
+                        <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Glückwunschnachricht</h2><br>
                         <div id="comments"></div>
                         <br>
                         <div class="row">
                             <div class="col text-center"><form action="https://github.com/clemens9103/wedding_card/blob/main/README.md">
-                                <button class="btn btn-primary btn-submit" type="submit">메시지 보내기</button></form>
+                                <button class="btn btn-primary btn-submit" type="submit">Nachricht senden</button></form>
                             </div>
                         </div>
                     </div>
