--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
                                 Sujeong Han</h3>
-                            <img alt="Groom" class="img-fluid" src="images/pic8.jpeg"/>
+                            <img alt="Groom" class="img-fluid" src="images/sujeong.jpeg"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
                             <h3 class="h2 ww-title" style="font-family: 'Sunflower', sans-serif; font-size:1.5em">
                                 Taejin Kim</h3>
-                            <img alt="Bride" class="img-fluid" src="images/pic9.jpeg"/>
+                            <img alt="Bride" class="img-fluid" src="images/taejin.jpeg"/>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="ww-section bg-light" id="events">
             <div class="container ww-wedding-event">
-                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Einladen</h2>
+                <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Einladung</h2>
                     <div class="col text-center mb-5">
                         <h6 style="font-family: 'Noto Serif KR', serif;">
                             <br>
@@ -178,18 +178,52 @@
                                     <img alt="Gallery Pic 7" class="img-fluid" src="images/pic5.jpeg"/>
                                 </a>
                             </div>
+                            <div class="card"
+                                 data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 8" class="img-fluid" src="images/pic8.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 9" class="img-fluid" src="images/pic9.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card"
+                                 data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 10" class="img-fluid" src="images/pic10.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 11" class="img-fluid" src="images/pic11.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card"
+                                 data-groups="[&quot;wedding&quot;,&quot;ceremony&quot;,&quot;party&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 12" class="img-fluid" src="images/pic12.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 13" class="img-fluid" src="images/pic13.jpeg"/>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <div class="ww-section ww-rsvp-detail" id="map">
             <div class="container">
                 <div class="col text-center">
                     <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Anfahrt</h2>
                     <div>
                         <h5 style="font-family: 'Noto Serif KR', serif;">Millitopia Hotel, Iris-Saal</h5>
-                        <h6 style="font-family: 'Noto Serif KR', serif;">83 Wiryedaero, Seongnam-si, Sujeong-gu, Gyeonggi-do</h6>
+                        <h6 style="font-family: 'Noto Serif KR', serif;">83 Wiryedaero, Seongnam-si, Sujeong-gu, Gyeonggi-do, Südkorea</h6>
                     </div>
                 </div>
 
@@ -229,21 +263,78 @@
                 <div class="container">
                     <div class="col text-center">
                         <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Glückwunschnachricht</h2><br>
+                        <h3 class="h3 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">Kontakt</h3>
+                            <p>Taejin's Email: <span id="e-mail"></span></p>
+                            <script>
+                                document.getElementById("e-mail").innerText = "clemens9103@gmail.com";
+                              </script>
                         <div id="comments"></div>
                         <br>
                         <div class="row">
-                            <div class="col text-center"><form action="https://github.com/clemens9103/wedding_card/blob/main/README.md">
+                            <div class="col text-center"><form action="">
                                 <button class="btn btn-primary btn-submit" type="submit">Nachricht senden</button></form>
+                                <br>
+                                <p>Nach Veröffentlichung der koreanischen mobilen Einladung können Nachrichten gesendet werden.</p>
                             </div>
                         </div>
+                        <br>
+                        <div class="gallery-container">
+                            <div class="gallery">
+                            <img src="images/slider/10_IMG_0788.jpg" alt="사진1">
+                            <img src="images/slider/12_IMG_0918.jpg" alt="사진2">
+                            <img src="images/slider/15_IMG_1259.jpg" alt="사진3">
+                            <img src="images/slider/16_IMG_1139.jpg" alt="사진4">
+                            <img src="images/slider/17_IMG_1170.jpg" alt="사진5">
+                            <img src="images/slider/IMG_0147.jpg" alt="사진6">
+                            <img src="images/slider/IMG_0211.jpg" alt="사진7">
+                            <img src="images/slider/IMG_0275.jpg" alt="사진8">
+                            <img src="images/slider/IMG_0309.jpg" alt="사진9">
+                            <img src="images/slider/IMG_0386.jpg" alt="사진10">
+                            <img src="images/slider/IMG_0576.jpg" alt="사진11">
+                            <img src="images/slider/IMG_1062.jpg" alt="사진12">
+                            <img src="images/slider/IMG_1096.jpg" alt="사진13">
+                            <img src="images/slider/IMG_1216.jpg" alt="사진14">
+                            <img src="images/slider/IMG_1318.jpg" alt="사진15">
+                            </div>
+                        </div>
+                        <script>
+                            const gallery = document.querySelector('.gallery');
+                            const images = document.querySelectorAll('.gallery img');
+
+                            let currentIndex = 0;
+                            const slideWidth = images[0].clientWidth;
+
+                            // 첫 번째 사진을 복사하여 마지막에 추가
+                            gallery.appendChild(images[0].cloneNode(true));
+
+                            function nextSlide() {
+                            currentIndex++;
+
+                            // 슬라이드가 마지막 사진 다음으로 이동하면 다시 첫 번째 사진으로 이동
+                            if (currentIndex === images.length) {
+                                setTimeout(() => {
+                                gallery.style.transition = 'none';
+                                currentIndex = 0;
+                                gallery.style.transform = `translateX(0)`;
+                                }, 3000); // 애니메이션 지연 시간과 일치시켜야 함
+                            } else {
+                                gallery.style.transition = 'transform 0.5s ease-in-out';
+                                gallery.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+                            }
+                            }
+
+                            setInterval(nextSlide, 3000); // 3초마다 자동으로 다음 슬라이드로 이동
+                        </script>
                     </div>
                 </div>
             </div>
         </div>
-
+        
     </div>
 </div>
+
 </div>
+
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
