--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
                     </div>
                 </div>
             </nav>
-        </div>
+        </div>    
+        <br>
+        <h2 class="h2 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">Liebe Gäste,</h2>
+        <h2 class="h5 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">wir möchten uns von ganzem Herzen bei Ihnen für Ihre Unterstützung und Liebe bedanken.</h2>
+        <h2 class="h5 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">Es bedeutet uns sehr viel, diesen besonderen Tag im Kreise unserer liebsten Freunde und Familie zu feiern.</h2>
+        <h2 class="h5 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">Ihre Anwesenheit macht unsere Hochzeit noch unvergesslicher.</h2>
+        <h2 class="h5 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">Mit herzlichsten Grüßen,</h2>
+        <h2 class="h5 text-center pb-3 ww-title" style="font-family: 'Sunflower', serif;">Taejin Kim & Sujeong Han</h2>
         <div class="ww-section" id="couple">
             <div class="container">
-                <!-- <h2 class="h1 text-center pb-3 ww-title" style="font-family: 'Noto Serif KR', serif;">신랑 & 신부</h2> -->
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="mt-3">
