--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <div id="comments"></div>
                         <br>
                         <div class="row">
-                            <div class="col text-center"><form action="">
+                            <div class="col text-center"><form action="https://deardeer.kr/m/20240901">
                                 <button class="btn btn-primary btn-submit" type="submit">Nachricht senden</button></form>
                                 <br>
                                 <p>Nach Veröffentlichung der koreanischen mobilen Einladung können Nachrichten gesendet werden.</p>
