Nachricht Senden Updated

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                             <div class="col text-center"><form action="https://deardeer.kr/m/20240901">
                                 <button class="btn btn-primary btn-submit" type="submit">Nachricht senden</button></form>
                                 <br>
-                                <p>Nach Veröffentlichung der koreanischen mobilen Einladung können Nachrichten gesendet werden.</p>
+                                <p>Sie können jetzt eine Nachricht im Gästebuch hinterlassen, indem Sie auf die Schaltfläche 'Nachricht senden' klicken.</p>
                             </div>
                         </div>
                         <br>
