--- a/index.html
+++ b/index.html
@@ -217,6 +217,21 @@
                                     <img alt="Gallery Pic 13" class="img-fluid" src="images/pic13.jpeg"/>
                                 </a>
                             </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 14" class="img-fluid" src="images/pic14.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 15" class="img-fluid" src="images/pic15.jpeg"/>
+                                </a>
+                            </div>
+                            <div class="card" data-groups="[&quot;vacation&quot;]">
+                                <a data-gallery="ww-gallery" data-toggle="lightbox">
+                                    <img alt="Gallery Pic 16" class="img-fluid" src="images/pic16.jpeg"/>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
